meta data storage engine